--- a/package.json
+++ b/package.json
@@ -12,11 +12,21 @@
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "format": "prettier --write \"./**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
-    "format:check": "prettier --check \"./**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
+    "format": "prettier --check \"./**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
+    "format:fix": "prettier --write \"./**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "type:check": "tsc",
     "lint": "eslint --max-warnings=0 --ext js,jsx,ts,tsx src",
-    "lint:fix": "eslint --max-warnings=0 --fix --ext js,jsx,ts,tsx src"
+    "lint:fix": "eslint --max-warnings=0 --fix --ext js,jsx,ts,tsx src",
+    "prepare": "husky install",
+    "lint-staged": "lint-staged --concurrent=false --config .lintstagedrc.js"
+  },
+  "lint-staged": {
+    "src/**/!(.)*.{js,jsx,ts,tsx}": [
+      "yarn lint:fix"
+    ],
+    "src/**/!(.)*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "yarn format:fix"
+    ]
   },
   "dependencies": {
     "@mdx-js/mdx": "v1",
@@ -42,6 +52,8 @@
     "gatsby-plugin-typegen": "^2.2.4",
     "gatsby-source-filesystem": "^4.7.0",
     "gatsby-transformer-sharp": "^4.7.0",
+    "husky": "^7.0.0",
+    "lint-staged": "^12.3.4",
     "prettier": "^2.5.1",
     "typescript": "^4.5.5"
   }
