--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "dev": "yarn type:check && gatsby develop",
     "build": "yarn type:check && gatsby build",
-    "serve": "yarn type:check && gatsby serve",
+    "serve": "gatsby serve",
     "clean": "gatsby clean",
     "format": "prettier --check \"./**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "format:fix": "prettier --write \"./**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
@@ -29,14 +29,19 @@
     ]
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.8.3",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@mdx-js/mdx": "v1",
     "@mdx-js/react": "v1",
+    "framer-motion": "^6.2.6",
     "gatsby": "^4.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
+    "@chakra-ui/gatsby-plugin": "^2.0.3",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint-config-prettier": "^8.3.0",
@@ -48,6 +53,7 @@
     "gatsby-plugin-manifest": "^4.7.0",
     "gatsby-plugin-mdx": "^3.7.1",
     "gatsby-plugin-react-helmet": "^5.7.0",
+    "gatsby-plugin-root-import": "^2.0.8",
     "gatsby-plugin-sharp": "^4.7.0",
     "gatsby-plugin-typegen": "^2.2.4",
     "gatsby-source-filesystem": "^4.7.0",
