--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "gatsby": "^4.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@chakra-ui/gatsby-plugin": "^2.0.3",
