--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@emotion/styled": "^11.6.0",
     "@mdx-js/mdx": "v1",
     "@mdx-js/react": "v1",
+    "@n8tb1t/use-scroll-position": "^2.0.3",
     "framer-motion": "^6.2.6",
     "gatsby": "^4.7.2",
     "react": "^17.0.1",
