--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     ]
   },
   "dependencies": {
+    "@apollo/client": "^3.5.9",
     "@chakra-ui/react": "^1.8.3",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
@@ -39,12 +40,13 @@
     "@types/react-helmet": "^6.1.5",
     "framer-motion": "^6.2.6",
     "gatsby": "^4.7.2",
+    "graphql": "^16.3.0",
     "react": "^17.0.1",
     "react-calendar-heatmap": "^1.8.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
-    "swr": "^1.2.2"
+    "recharts": "^2.1.9"
   },
   "devDependencies": {
     "@chakra-ui/gatsby-plugin": "^2.0.3",
