use @graphql-codgen and generate graphql types

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "yarn type:check && gatsby develop",
     "build": "yarn type:check && gatsby build",
     "serve": "gatsby serve",
+    "generate:type": "npx graphql-codegen --config codegen.yaml",
     "clean": "gatsby clean",
     "format": "prettier --check \"./**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "format:fix": "prettier --write \"./**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
@@ -33,6 +34,12 @@
     "@chakra-ui/react": "^1.8.3",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@graphql-codegen/add": "^3.1.1",
+    "@graphql-codegen/cli": "^2.6.2",
+    "@graphql-codegen/typed-document-node": "^2.2.5",
+    "@graphql-codegen/typescript": "^2.4.5",
+    "@graphql-codegen/typescript-operations": "^2.3.2",
+    "@graphql-codegen/typescript-react-apollo": "^3.2.8",
     "@mdx-js/mdx": "v1",
     "@mdx-js/react": "v1",
     "@n8tb1t/use-scroll-position": "^2.0.3",
