fix little behavior

--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "dev": "yarn type:check && gatsby develop",
     "build": "yarn type:check && gatsby build",
     "serve": "gatsby serve",
-    "generate:type": "npx graphql-codegen --config codegen.yaml",
     "clean": "gatsby clean",
     "format": "prettier --check \"./**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "format:fix": "prettier --write \"./**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "type:check": "tsc",
+    "type:generate": "npx graphql-codegen --config codegen.yaml",
     "lint": "eslint --max-warnings=0 --ext js,jsx,ts,tsx src",
     "lint:fix": "eslint --max-warnings=0 --fix --ext js,jsx,ts,tsx src",
     "prepare": "husky install",
