--- a/codegen.yaml
+++ b/codegen.yaml
@@ -6,6 +6,7 @@ generates:
     schema: http://localhost:8000/___graphql
     documents:
       - ./src/**/logo-link.tsx
+      - ./src/**/useBlogList.ts
       - ./node_modules/gatsby*/!(node_modules)/**/*.js
     plugins:
       - add:
