--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@n8tb1t/use-scroll-position": "^2.0.3",
     "@types/react-calendar-heatmap": "^1.6.3",
     "@types/react-helmet": "^6.1.5",
+    "dayjs": "^1.10.8",
     "framer-motion": "^6.2.6",
     "gatsby": "^4.7.2",
     "graphql": "^16.3.0",
