--- a/codegen.yaml
+++ b/codegen.yaml
@@ -5,8 +5,9 @@ generates:
   ./src/types/gatsby-types.d.ts:
     schema: http://localhost:8000/___graphql
     documents:
-      - ./src/**/logo-link.tsx
-      - ./src/**/useBlogList.ts
+      - ./src/components/blog/blog-template.tsx
+      - ./src/hooks/useLogoLink.ts
+      - ./src/hooks/useBlogList.ts
       - ./node_modules/gatsby*/!(node_modules)/**/*.js
     plugins:
       - add:
