--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/mdx-js__react": "^1.5.5",
     "@types/react-calendar-heatmap": "^1.6.3",
     "@types/react-helmet": "^6.1.5",
+    "@types/react-syntax-highlighter": "^13.5.2",
     "framer-motion": "^6.2.6",
     "gatsby": "^4.7.2",
     "graphql": "^16.3.0",
@@ -53,6 +54,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
+    "react-syntax-highlighter": "^15.4.5",
     "recharts": "^2.1.9"
   },
   "devDependencies": {
