--- a/codegen.yaml
+++ b/codegen.yaml
@@ -8,6 +8,7 @@ generates:
       - ./src/components/blog/blog-template.tsx
       - ./src/hooks/useLogoLink.ts
       - ./src/hooks/useBlogList.ts
+      - ./src/hooks/useTagList.ts
       - ./node_modules/gatsby*/!(node_modules)/**/*.js
     plugins:
       - add:
