--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lint:fix": "eslint --max-warnings=0 --fix --ext js,jsx,ts,tsx src",
     "prepare": "husky install",
     "lint-staged": "lint-staged --concurrent=false --config .lintstagedrc.js",
-    "forestry:preview": "gatsby develop"
+    "forestry:preview": "gatsby develop -p 8080"
   },
   "lint-staged": {
     "src/**/!(.)*.{js,jsx,ts,tsx}": [
