--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "mashroom",
+  "name": "mashroom.at",
   "version": "1.0.0",
   "private": true,
-  "description": "mashroom",
+  "description": "✍️ All describe usual my life.",
   "author": "yoshinori.matsuzaki",
   "keywords": [
     "gatsby"
