--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
+    "react-simple-image-viewer": "^1.2.2",
     "react-syntax-highlighter": "^15.4.5",
     "recharts": "^2.1.9",
     "three": "0.134.0"
